# Project_SecurityCamera

./: .gitignore  CMakeLists.txt  README.md  STM32F072XX_FLASH.ld  output.raw
CubeMx_Projects/: screen.ioc
Drivers/: CMakeLists.txt
RF/: CMakeLists.txt  receive.py
RF/Inc/: nrf24l01p.h
RF/RX/Inc/: convert.py  image_data.h  nrf24l01p.h
RF/RX/Src/: main.c  tempCodeRunnerFile.c
RF/Src/: main.c  nrf24l01p.c  nrf24l01p_ext.c  stm32f0xx_it.c
RF/TX/Inc/: nrf24l01p_ext.h
RF/TX/Src/: main.c  nrf24l01p.c  tempCodeRunnerFile.c
camera/: CMakeLists.txt  captured_frame.h
camera/Inc/: ArduCAM.h  camera.h  sccb_bus.h  spi.h  stm32f0xx_it.h
camera/Src/: ArduCAM.c  camera.c  main.c  main_uart_debug.c  sccb_bus.c  spi.c  stm32f0xx_it.c
camera_screen/: CMakeLists.txt  capture.py
camera_screen/Inc/: ili9341.h  jpeg_decode.h  main.h  main_uart_debug.h  spi.h
camera_screen/Lib/: tjpgd.c
camera_screen/Src/: ili9341_font.c  ili9341_gfx.c  jpeg_decode.c  main.c  spi.c
display/: CMakeLists.txt  convert_image.sh
display/Inc/: jpeg_decode.h  test_image.h
display/Lib/: tjpgd.c  tjpgd.h  tjpgdcnf.h
display/Src/: jpeg_decode.c  main.c  stm32f0xx_it.c
docs/: spi_i2c_pins.txt
docs/img/src/: screen_connection.drawio
main_base_station/: CMakeLists.txt
main_base_station/Inc/: images.h  jpeg_decode.h  main.h  nrf24l01p.h  nrf24l01p_ext.h  ringbuffer.h  stm32f0xx_it.h  test_image.h
main_base_station/Src/: ili9341_ext.c  ili9341_gfx.c  jpeg_decode.c  main.c  nrf24l01p_ext.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
main_camera_module/: CMakeLists.txt
main_camera_module/Inc/: ArduCAM.h  main.h  nrf24l01p.h  nrf24l01p_ext.h  sccb_bus.h  spi.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h
main_camera_module/Src/: ArduCAM.c  camera.c  main.c  nrf24l01p.c  nrf24l01p_ext.c  spi.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c
screen/: CMakeLists.txt
screen/Inc/: ili9341.h  ili9341_ext.h  ili9341_font.h  ili9341_gfx.h  main.h  stm32f0xx_it.h
screen/Src/: ili9341.c  ili9341_ext.c  ili9341_gfx.c  images.c  main.c  stm32f0xx_hal_msp.c
